# sqlite-viewer1

./: .gitignore  README.md  pyproject.toml  sqlite-viewer.spec
.pytest-tmp/test_csv_export_writes_utf8_he0/: export.csv
.pytest-tmp/test_unsupported_database_path0/: notes.txt
docs/superpowers/plans/: 2026-07-19-table-row-editing.md
docs/superpowers/specs/: 2026-07-19-table-row-editing-design.md  2026-07-20-row-deletion-design.md
src/sqlite_viewer/: __init__.py  app.py
src/sqlite_viewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sqlite_viewer/models/: __init__.py  domain.py  errors.py
src/sqlite_viewer/presentation/: __init__.py  database_tab.py  main_window.py  views.py
src/sqlite_viewer/services/: __init__.py  connection.py  export.py  query.py  row_write.py  schema.py
src/sqlite_viewer/workers/: __init__.py  database_worker.py
tests/: __init__.py  conftest.py  test_end_to_end.py
tests/presentation/: test_database_tab.py  test_main_window.py  test_views.py
tests/services/: test_connection.py  test_domain.py  test_paging_and_export.py  test_query_validation.py  test_row_write.py  test_schema.py
tests/workers/: test_database_worker.py
