[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite-viewer"
version = "0.1.0"
description = "A safe read-only SQLite desktop viewer"
requires-python = ">=3.12"
dependencies = ["PySide6>=6.8,<7"]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "pytest-qt>=4.4,<5", "PyInstaller>=6.11,<7"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.packages.find]
where = ["src"]
